# db-metadata-extractor-mcp

./: .dockerignore  .gitignore  ACTION_PLAN.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  LICENSE  MCP_PUBLISHER_GUIDE.md  PUBLISHING_CHECKLIST.md  QUICK_PUBLISH_REFERENCE.md  QUICK_START_DOCKER.md  README.md  SERVER_README.md  docker-publish.ps1  pyproject.toml  requirements.txt  server.json
.github/workflows/: publish-mcp.yml
src/db_metadata_extractor/: server.py
src/db_metadata_extractor/reference/db_extraction_schema/: ai_utils.py  connectors.py  generate_schema_report.py  main.py  test.py
src/db_metadata_extractor_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/db_metadata_extractor_mcp/reference/db_extraction_schema/: models.py  services.py  sql_parser.py
