[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-metadata-extractor-mcp"
version = "0.1.2"
description = "A Python MCP stdio server for database metadata extraction."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Karpagavalli", email = "Karpagavalli.kameshwara.elango@optisolbusiness.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp",
    "starlette",
    "uvicorn",
    "fastapi==0.134.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "openai==0.28.0",
    "psycopg2-binary==2.9.11",
    "snowflake-connector-python==4.3.0",
    "pyodbc==5.3.0",
    "pymssql==2.3.13",
    "cryptography==44.0.1",
    "google-cloud-bigquery==3.40.1",
    "oracledb==3.4.2",
    "requests",
]

[project.urls]
Homepage = "https://github.com/Optisol-Business/db-metadata-extractor-mcp"
Repository = "https://github.com/Optisol-Business/db-metadata-extractor-mcp"
Issues = "https://github.com/Optisol-Business/db-metadata-extractor-mcp/issues"

[project.scripts]
db-metadata-extractor-mcp = "db_metadata_extractor.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=22.0", "flake8>=4.0", "mypy>=0.900"]

[tool.setuptools]
packages = ["db_metadata_extractor"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
db_metadata_extractor = ["*.py", "reference/**/*.py"]